--- a/tests/css/media-grid.scss
+++ b/tests/css/media-grid.scss
@@ -5,6 +5,10 @@ body {
   background: $mg-pg;
 }
 
+#main {
+  padding-bottom: 0;
+}
+
 .test-body {
   margin-top: 1rem;
 }
